# solid-memory

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.collector  README.md  collector_service.py  docker-compose.yml  index.html  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sources.yaml  synergy  tsconfig.json  tsconfig.node.json
api/: auth.py  main.py  rate_limit.py  region.py
app/: database.py  health.py  main.py  metrics.py  models.py  schemas.py
backend/: Dockerfile  alembic.ini  requirements.txt
collector/: main.py  schedule.sh
collectors/: __init__.py  api_feed.py  base.py  dealer_html.py  oem_pdf.py
data/: catalog_seed.json
db/: program_repository.py
docs/: data_schema.md  operator_playbook.md  quickstart.md  schema.md  troubleshooting.md
engine/: cli.py  db.py  exporter.py  ingest.py  models.py  rules.py  run.py  scoring.py  validators.py
frontend/: Dockerfile  package.json
grafana-monitoring/: README.md  docker-compose.yml  grafana.ini  nginx.conf  prometheus.yml  promtail-config.yaml
k8s/: api-deployment.yaml  collector-cronjob.yaml  migrate-job.yaml  postgres.yaml
migrations/: 001_create_programs.sql
normalization/: catalog.py
parsers/: html_table.py  pdf_program.py
sample_data/: evidence.csv  funding_terms.csv  generate_sample_data.py  hedge_book.csv  ma_targets.csv  market_context.csv  market_indicators.csv  portfolio_positions.csv  signals.csv  subscores.csv  targets.csv
scripts/: first_run.sh  migrate.py  seed_catalog.py
shared/: config.py  db.py  models.py
src/: App.tsx  main.tsx  (+1 more)
(+112 files in other folders)
